Clean up legacy Java warnings